Update license in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "emanueledona/unicredit-api",
     "version": "master",
+    "license": "MIT",
     "minimum-stability": "dev",
     "autoload": {
         "psr-4" : {
